# ecomerce-analytics

./: env_example  pyproject.toml
ecomerce_analytics/: main.py  olist_data_extractor.py  olist_data_loader.py
nbs/: Olist_EDA.ipynb
