[tool.poetry]
name = "ecomerce-analytics"
version = "0.1.0"
description = ""
authors = ["Tiago Henrique <tiagohs.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "ecomerce_analytics"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"
ipdb = "^0.13.13"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"
ipython-sql = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
